improved markers behaviour when switching to options and back

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,19 @@
 [user]
 	name = James Ingram
 	email = j.ingram@netcologne.de
+[color]
+  ui = auto
+[color "branch"]
+  current = yellow reverse
+  local = yellow
+  remote = green
+[color "diff"]
+  meta = yellow bold
+  frag = magenta bold
+  old = red bold
+  new = green bold
 [color "status"]
-	changed = cyan
+  added = yellow
+  changed = green
+  untracked = cyan
 
